# scheduling-solver

./: .flake8  .gitignore  .gitlab-ci.yml  Pipfile  README.md  pyproject.toml  setup.py  tox.ini  xml_reader.py
Tool/TestCases/CaseExample/: ScheduleTable.xml
cases/: Case1.tsk
data/: Readme.txt  case_1.cfg  case_1.tsk
data/100pct/Case 0/: 0-151-31-1.tsk
data/100pct/Case 1/: 0-151-31-1.tsk
data/100pct/Case 10/: 9-151-31-1.tsk
data/100pct/Case 11/: 1-151-31-1.tsk
data/100pct/Case 12/: 0-151-31-1.tsk
data/100pct/Case 13/: 1-151-31-1.tsk
data/100pct/Case 14/: 2-151-31-1.tsk
data/100pct/Case 15/: 3-151-31-1.tsk
data/100pct/Case 16/: 4-151-31-1.tsk
data/100pct/Case 17/: 5-151-31-1.tsk
data/100pct/Case 18/: 6-151-31-1.tsk
data/100pct/Case 19/: 7-151-31-1.tsk
data/100pct/Case 2/: 1-151-31-1.tsk
data/100pct/Case 20/: 8-151-31-1.tsk
data/100pct/Case 21/: 9-151-31-1.tsk
data/100pct/Case 22/: 2-151-31-1.tsk
data/100pct/Case 23/: 3-151-31-1.tsk
data/100pct/Case 24/: 4-151-31-1.tsk
data/100pct/Case 25/: 5-151-31-1.tsk
data/100pct/Case 26/: 6-151-31-1.tsk
data/100pct/Case 27/: 7-151-31-1.tsk
data/100pct/Case 28/: 8-151-31-1.tsk
data/100pct/Case 29/: 9-151-31-1.tsk
data/100pct/Case 3/: 2-151-31-1.tsk
data/100pct/Case 4/: 3-151-31-1.tsk
data/100pct/Case 5/: 4-151-31-1.tsk
data/100pct/Case 6/: 5-151-31-1.tsk
data/Case 1/: 15-3-1-1.tsk
data/Case 6/: 15-3-1-6.tsk
data/Test1/: Test1.xml
data/Test2/: Test2.cfg  Test2.xml
data/large/: large.tsk
data/medium/: medium.tsk
data/small/: small.tsk  small.xml
src/: builder.py  datatypes.py  draw.py  exception.py  format.py  formatter.py  log.py  main.py  rate_monotonic.py  solver.py  tests.py  timed.py  type_alias.py  type_aliases.py
tests/: main.py
(+208 files in other folders)
