[tool.poetry]
name = "scheduling-solver"
version = "0.3.1-alpha"
description = "Solve task scheduling problems using constraint programming."

authors = [
	"Antoine Sébert <antoine.sb@orange.fr>"
]

readme = 'README.md'

repository = "https://gitlab.com/Zeltex/02229---systems-optimization/tree/constraint-programming"
homepage = "https://gitlab.com/Zeltex/02229---systems-optimization/tree/constraint-programming"

keywords = ['constraint-programming', 'solver', 'scheduling', 'CLI', 'educational-project']

[tool.poetry.dependencies]
python = "^3.7"
ortools = "*"
setuptools = "*"
tqdm = "*"
recordclass = "^0.13.0"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-import-order = "^0.18"
pep8-naming = "^0.9.0"
flake8-bandit = "^2.1"
flake8-bugbear = "^19.8"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.0"
flake8-executable = "^2.0"
flake8-annotations = "^2.0"
flake8-cognitive-complexity = "^0.0.2"
